modified route params to puts, regen
